# TrueCollider

./: .gitignore  CMakeLists.txt  COLLIDER_MODES_README.md  KEYFOUNDKEYFOUND.txt  Makefile  PUZZLE_SEARCH_README.md  README.md  analyze_keys.py  backend_config.cpp  backend_config.h  bip32_search.py  build.bat  build_cuda_msvc.bat  build_cuda_vs2022.bat  build_linux.sh  build_mingw_native.bat  build_mingw_native.sh  build_termux.sh  build_windows.sh  build_windows_cmake.sh  cpu_features.cpp  cpu_features.h  keyhunt.cpp  puzzle_40_160_data.json  puzzle_scan.py  research_engine.cpp  research_engine.h  research_implants.cpp  run_benchmarks.ps1  run_gpu_cuda_example.bat  run_keyhunt.bat  run_mode_tests.ps1  run_puzzle66_example.bat  run_smoke_tests.ps1  run_sol_sample.bat  test_bloom.cpp  test_crypto.cpp  test_puzzle.py  test_puzzle.rs  wallet_search.py
.github/workflows/: ci.yml  release.yml
base58/: base58.c
binaryfuse/: binaryfuse_wrapper.h  binaryfusefilter.h
bloom/: bloom.cpp
cmake/toolchains/: mingw-w64-x86_64.cmake  termux-aarch64.cmake
compat/: getopt.c  getopt.h
docs/: BUILD.md  COMMANDS.md  ROADMAP.md  SPEEDS.md
ed25519/: README.md  ed25519_sha512_bridge.h  keypair.c  sha512_bridge.cpp
examples/: README.md  balance_check.bat  brainwallet_example.bat  bsgs_example.bat  build_cpu.bat  build_cuda.bat  dry_run.bat  gpu_cuda_address.bat  kangaroo_example.bat  minikeys_example.bat  mnemonic_example.bat  poetry_example.bat  pubkey2addr_example.bat  search_btc_address.bat  search_eth.bat  search_rmd160.bat  search_rs_random_sequential.bat  search_sol.bat  vanity_btc.bat  xpoint_example.bat
gmp256k1/: Random.cpp
gpu/: README.md  gpu_dispatcher.cpp  gpu_dispatcher.h
gpu/cuda/: CMakeLists.txt  cuda_backend.cu  ed25519_cuda.cu  ed25519_cuda.h  ed25519_cuda_host.cpp  ed25519_ref10_device.cuh  hash160_cuda.cu  hash160_cuda.h  host_hash160_bridge.cpp  pbkdf2_sha512_cuda.cu  pbkdf2_sha512_cuda.h  rmd160_device.inc  secp256k1_cuda.cu  secp256k1_cuda.h
gpu/opencl/: CMakeLists.txt  hash160_opencl.h  hash160_opencl_src.h  opencl_backend.cpp
hash/: hash160_avx2.cpp  hash160_avx2.h  hash160_avx512.cpp  hash160_avx512.h  ripemd160.h  ripemd160_sse.cpp  sha256.cpp  sha256.h  sha256_sse.cpp  sha512.cpp  sha512.h
oldbloom/: bloom.cpp
rmd160/: rmd160.h
scripts/: bench_vector.sh
secp256k1/: Int.cpp  Int.h  IntMod.cpp  Random.cpp  SECP256K1.cpp  SECP256k1.h
sha3/: keccak.c
tests/: test_privkey1.rmd
tests_cmake/: CMakeLists.txt  test_binaryfuse.cpp
xxhash/: xxhash.h
